8024345: 'assert(_value != NULL) failed: resolving NULL _value' from VM_RedefineClasses::set_new_constant_pool

The OOME's in the JVMTI merge_cp_and_rewrite and set_new_constant_pool must be handled correctly

Reviewed-by: coleenp, dholmes